# Free-Radio-NoAds-NoTalk

./: .SRCINFO  .gitignore  AUR_SUBMISSION_GUIDE.md  CLAUDE.md  CMakeLists.txt  CONTEXT.txt  FINAL_AUR_STEPS.md  FreeRadio-v1.2.1.plasmoid  FreeRadio-v1.2.plasmoid  PKGBUILD  README.md  WIDGET_REINSTALL_CONTEXT.md  check_audio_sources.sh  create_complete_server_mapping.py  create_station_mapping.py  filter_popular_genres.py  fix_all_metadata.py  fix_category_names.py  fix_failed_stations.py  fix_metadata_urls.py  fix_radiodata.py  generate_all_categories.py  generate_radiodata.py  generate_server_metadata_mapping.py  icecast_all_organized.json  icecast_genres.json  icecast_popular_genres.json  metadata_url_fixes.json  monitor_pipewire_audio.sh  prepare_release.sh  quick_test.py  radcapradio-0.2.plasmoid  radcapradio-0.3.plasmoid  radcapradio-0.4.plasmoid  radcapradio-1.0.plasmoid  reinstall_widget.sh  scrape_icecast.py  scrape_icecast_genres.py  server_metadata_mapping.json  simple_audio_check.sh  (+9 more)
.beads/: deletions.jsonl  issues.jsonl
.github/workflows/: build.yml  smoke-install-release.yml
freeradio/: AudioCapture.cpp  AudioCapture.h  CHANGELOG.md  CMakeLists.txt  CMakeLists_app.txt  CMakeLists_plugin.txt  SessionMonitor.cpp  SessionMonitor.h  freeradio.desktop  freeradio.plasmoid  freeradio.rc  main.cpp  metadata.desktop  metadata.json  resources.qrc  test_audio.cpp
freeradio-panel/: metadata.json
freeradio-panel/contents/ui/: main.qml  radiodata.js
freeradio-remote/: metadata.json
freeradio-remote/contents/config/: main.xml
freeradio-remote/contents/ui/: main.qml
freeradio/contents/config/: configGeneral.qml  main.xml
freeradio/contents/ui/: AudioStreamer.qml  MainContent.qml  MinimalPlayer.qml  RemoteControl.qml  SpectrumVisualizer.qml  SpectrumVisualizerAdvanced.qml  SpectrumVisualizerNew.qml  SpectrumWorker.js  SystemAudioCapture.qml  main.qml  main_plasmoid.qml  main_standalone.qml  radiodata.js  radiodata_radcap.js
freeradio/plugin/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
packaging/appimage/: build-appimage.sh
packaging/macos/: Info.plist  build-macos.sh
packaging/windows/: build-windows.bat  installer.iss  installer.nsi
radcap channels/: aliases.json  all_streams.txt  all_streams_deduped.txt  categories.txt  full_named_streams.json  generate_radiodata.py  local_channels.txt  named_streams.json  unique_hosts.txt
radcap channels/radcap.ru/: 00s-m.html  00s.html  60s-m.html  60s.html  70s-m.html  70s.html  80ru-m.html  80ru.html  80s-m.html  80s.html  90s-m.html  90s.html  aabmds-m.html  aabmds.html  abstracthiphop-m.html  abstracthiphop.html  accordion-m.html  accordion.html  acid-m.html  acid.html  acidjazz-m.html  acidjazz.html  acidrock-m.html  acidrock.html  acoustic-m.html  acoustic.html  acousticblues-m.html  acousticblues.html  acousticguitar-m.html  acousticguitar.html  africanfolk-m.html  africanfolk.html  afrobeat-m.html  afrobeat.html  altcountry-m.html  altcountry.html  altrock-m.html  altrock.html  ambient-m.html  ambient.html  (+989 more)
radcap channels/radcap.ru/fonts/modern_lcd-7/: modern_lcd-7*.eot.html  modern_lcd-7.eot
radcap channels/radcap.ru/fonts/perfo-bold/: perfo-bold.eot?
radcap channels/radcap.ru/graf2/: blue-music-equalizer.jpg.html
radcap channels/radcap.ru/meta/1/: stream19001.js  stream19003.js  stream19005.js  stream19007.js  stream19009.js  stream19011.js  stream19013.js  stream19015.js  stream19017.js  stream19019.js  stream19021.js  stream19023.js  stream19025.js  stream19027.js  stream19029.js  stream19031.js  stream19033.js  stream19035.js  stream19037.js  stream19039.js  stream19041.js  stream19043.js  stream19045.js  stream19047.js  stream19049.js  stream19051.js  stream19053.js  (+50 more)
radcap channels/radcap.ru/playerjs/: playerjs-f.js  playerjs-m-nsn.js
radcap channels/radcap.ru/scripts/: select.js
radcap channels/radcap.ru/style-css/: style-m-19.css  style19-fff.css
radcapradio/: README.md  metadata.desktop  metadata.json
radcapradio/contents/config/: main.xml
radcapradio/contents/ui/: main.qml  radiodata.js
radio_research/: FINDINGS.md  ambient_chill.md  blues_funk_soul.md  classical.md  country_americana.md  electronic_edm.md  folk_world.md  hiphop_rap.md  jazz.md  metal_hardrock.md  pop_indie.md  reggae_ska_dub.md  rock_alternative.md  talk_english.md
(+919 files in other folders)
